--- a/mirrorui/stylus/coms/cachepage.styl
+++ b/mirrorui/stylus/coms/cachepage.styl
@@ -1,112 +1,52 @@
 ﻿// 缓存页 选项卡标签
 .tabsbox
-    display: flex
-    position: relative
-    height: 44px
+    display: grid
+    // 4列:左导航,标签框,右导航,功能框 容器总高度36 + 2(边框)
+    grid-template-columns: 36px auto 36px 72px
+    align-items:center
     border: 1px solid var-gray
-    border-bottom: 2px solid var-gray
-    background-color: var-gray-dk
-    -webkit-user-select: none
-    -moz-user-select: none
-    -ms-user-select: none
+    background-color: var-white
     user-select: none
-// 左右导航按钮
+// 1和3.左右导航按钮
 .tabsbox
     &-left, &-right
-        flex: 0 1 36px
+        align-self:center
         cursor: pointer
-        padding: 8px 0
-        background-color: var-white
+    // 按钮三角形 (18的三角形所在盒模型为36X36)
+    &-left
+        triangle(18px, left, var-gray-dk)
     &-right
-        text-align: right
-    &-left:before, &-right:before
-        content: ''
-        vertical-align: middle
-    // 按钮三角形
-    &-left:before
-        content: ''
-        triangle(12px, left, var-gray-dk)
-    &-right:before
-        content: ''
-        triangle(12px, right, var-gray-dk)
-    &-left:hover, &-right:hover
-        background-color: var-gray
-    // 按钮点击时
-    &-left:active, &-right:active
-        background-color: var-gray-lt
-// 右侧功能菜单按钮
-.tabsbox
-    &-menutitle
-        width: 80px
-        text-align: center
-        padding: 10px
-        background-color: var-white
-    // 按钮三角形
-    &-menutitle:after
-        content: ''
-        triangle(5px, bottom, var-gray-dk)
-        margin-left: 4px
-        vertical-align: middle
-    &-menutitle:hover
-        background-color: var-gray
-    // 鼠标移入时,显示其下菜单项目
-    &-menutitle:hover ~ &-menugroup
-        display: block
-// 菜单项框
-.tabsbox
-    &-menugroup
-        display: none
-        position: absolute
-        top: 39px
-        right: 0
-        width: 100px
-        color: var-gray-dk
-        text-align: center
-        background-color: var-white
-        border: 2px solid var-gray-dk
-        border-top: none
-        cursor: pointer
-    &-menugroup:hover
-        display: block
-    // 功能菜单项
-    &-close-all, &-close-other, &-goto-active
-        padding: 10px
-        display: block
-    // 第1个菜单项加个下边
-    &-goto-active
-        border-bottom: 1px solid var-gray
-    // 菜单项hover
-    &-close-all:hover, &-close-other:hover, &-goto-active:hover
-        color: var-font-color
-        background-color: var-gray-dk
-// tabs框
+        triangle(18px, right, var-gray-dk)
+    // 按钮hover(和点击)时
+    &-left:hover
+        border-right-color: var-black-lt
+    &-right:hover
+        border-left-color: var-black-lt
+// 2.标签页框
 .tabsbox
     // 选项卡包装框
     &-navbox
-        flex: 1 1 0
-        width: 0
+        border-left:.5em solid transparent
+        border-right:.5em solid transparent
+        height:36px
         overflow: hidden
     // 选项卡框
     &-nav
-        position: relative
-        margin-right: 100px
+        // 为最右边的标签留出关闭按钮的空间
+        padding-right:26px
         white-space: nowrap
-        overflow-x: auto
-        background-color: var-gray-lt
+        overflow-y:hidden
+        overflow-x:scroll
     // 选项卡
     &-tab
         display: inline-block
         position: relative
-        padding: 10px 15px
-        height: 40px
-        margin: 0 2px
-        background-color: var-gray-dk
+        height:36px
+        line-height:36px
+        padding:0 8px
+        margin:0 3px
+        background-color: var-gray
         cursor: pointer
-    // hover时,增大padding-right,为右上角关闭按钮取得空间
-    &-tab:hover
-        color: var-gray-lt
-        padding-right: 24px
-        transition: padding-right $duration
     // 活动的选项卡
     &-tab.active
         color: var-white
@@ -115,29 +55,76 @@
     &-tabclose
         display: none
         position: absolute
-        width: 16px
-        height: 16px
-        line-height: 16px
-        text-align: center
-        color: var-white
         top: 0
         right: 0
+        width:18px
+        height:18px
+        line-height:18px
+        text-align:center
+        color: var-white
         background-color: #CC0000
         text-decoration: none
-    // 鼠标移入选项卡,显示关闭按钮
+    // hover时,增大padding-right,为右上角关闭按钮取得空间(按钮18px+原有padding的8px)
+    &-tab:hover
+        padding-right: calc(18px + 8px)
+        transition: padding-right $duration
+    // hover时,显示关闭按钮
     &-tab:hover &-tabclose
         display: inline-block
-// 颜色 导航底边,活动选项卡,右边功能菜单框左和下边框,导航三角形
+// 4.功能菜单
+.tabsbox
+    // 容器
+    &-menugroup
+        position: relative
+        height:36px
+        border-left: 1px solid var-gray
+        cursor: pointer
+    // 菜单图标
+    &-menutitle
+        position:absolute
+        top:0
+        bottom:0
+        left:0
+        right:0
+        margin:auto
+        triangle(.6em, bottom, var-gray-dk)
+        border-bottom:none
+    // 鼠标移入时,图标变色
+    &-menugroup:hover &-menutitle
+        border-top-color: var-black-lt
+    // 菜单框
+    &-menulist
+        display:none
+        position:absolute
+        right:-1px
+        top: calc(100% + 1px)
+        width:calc(3 * 36px)
+        border: 1px solid var-gray
+        background-color: var-white
+        border-top:none
+    // 鼠标移入时,显示其下菜单项目
+    &-menugroup:hover &-menulist
+        display: block
+    // 功能菜单项
+    &-close-all, &-close-other, &-goto-active
+        display: block
+        padding:.4em
+    // 菜单项hover
+    &-close-all:hover, &-close-other:hover, &-goto-active:hover
+        color: var-font-color
+        background-color: var-gray-dk
+    // 菜单项点击
+    &-close-all:active, &-close-other:active, &-goto-active:active
+        padding-left:.6em
+
+// 主题颜色  活动选项卡,导航三角形,功能菜单图标
 for key, val in $themeColorsKV
     .tabsbox
-        &.{key}
-            border-color: val[0]
         &.{key} &-tab.active
             background-color: val[0]
-        &.{key} &-menugroup
-            border-color: val[0]
-            border-top: none
-        &.{key} &-left:before
+        &.{key} &-left:hover
             border-right-color: val[0]
-        &.{key} &-right:before
+        &.{key} &-right:hover
             border-left-color: val[0]
+        &.{key} &-menugroup:hover &-menutitle
+            border-top-color: val[0]
