sidemenu分割线样式修正

--- a/mirrorui/stylus/coms/sidemenu.styl
+++ b/mirrorui/stylus/coms/sidemenu.styl
@@ -68,6 +68,9 @@
         // 菜单组标题变小点 收起/展开
         &-arrleft, &-arrdown
             width:.6em
-        // 菜单项左对齐
+        // 菜单项 左对齐
         &-item
             padding: .4em 0 .4em .4em
+        // 菜单组分割线
+        &-split
+            margin: .4em 0 .4em .4em
