--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -1840,6 +1840,9 @@ p {
   .sidemenu-item {
     padding: 0.4em 0 0.4em 0.4em;
   }
+  .sidemenu-split {
+    margin: 0.4em 0 0.4em 0.4em;
+  }
 }
 .panel {
   border: 1px solid var(--color-gray-lt);
