锁图标更新,电源文档更新

--- a/mirrorui/stylus/cssicon/icons/lock.styl
+++ b/mirrorui/stylus/cssicon/icons/lock.styl
@@ -16,6 +16,4 @@
     &:after
         width: .8em
         height: .4em
-        border-color:currentColor
-        border-style:solid
-        border-width:.19em .32em
+        background-image: radial-gradient(circle,transparent .06em,currentColor .06em);
