--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -3302,9 +3302,7 @@ p {
 .ico-lock:after {
   width: 0.8em;
   height: 0.4em;
-  border-color: currentColor;
-  border-style: solid;
-  border-width: 0.19em 0.32em;
+  background-image: radial-gradient(circle, transparent 0.06em, currentColor 0.06em);
 }
 .ico-flag {
   position: relative;
