锁图标样式修正

--- a/mirrorui/stylus/cssicon/icons/lock.styl
+++ b/mirrorui/stylus/cssicon/icons/lock.styl
@@ -16,4 +16,4 @@
     &:after
         width: .8em
         height: .4em
-        background-image: radial-gradient(circle,transparent .06em,currentColor .06em);
+        background-image: radial-gradient(circle,transparent .06em,currentColor .06em)
