--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -3620,3 +3620,21 @@ p {
   font-size: 1em;
   transform: translate(-50%, -50%);
 }
+.ico-star4 {
+  position: relative;
+}
+.ico-star4:before,
+.ico-star4:after {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 1em;
+  height: 1em;
+  background-color: currentColor;
+}
+.ico-star4:before {
+  clip-path: polygon(50% 0, 75% 50%, 50% 100%, 25% 50%);
+}
+.ico-star4:after {
+  clip-path: polygon(50% 25%, 100% 50%, 50% 75%, 0 50%);
+}
