--- a/mirrorui/stylus/variables/font.styl
+++ b/mirrorui/stylus/variables/font.styl
@@ -1,6 +1,6 @@
-﻿// body font-size 基准,手机是16px
+﻿// body font-size 基准
 // 如果没有必要,组件的字体大小不必设置,继承body
-// 最小字体12px,默认14px(手机16px)
+// 最小字体12px,默认14px
 $font-size-sm = 12px
 $font-size = 14px
 $font-size-md = 16px
