--- a/mirrorui/stylus/index.styl
+++ b/mirrorui/stylus/index.styl
@@ -23,6 +23,7 @@
 @import "coms/article"
 @import "coms/msgpanel"
 @import "coms/sidemenu"
+@import "coms/docmenu"
 @import "coms/panel"
 @import "coms/tabs"
 @import "coms/msgbox"
